--- a/www/apps/user-guide/app/products/page.mdx
+++ b/www/apps/user-guide/app/products/page.mdx
@@ -32,7 +32,5 @@ Find tips to use lists effectively in [this guide](../tips/lists/page.mdx).
 
 You can also manage other product-related data under Settings:
 
-{/* TODO add links */}
-
-- [Manage Product Tags](#)
-- [Manage Product Types](#)
+- [Manage Product Tags](../settings/product-tags/page.mdx)
+- [Manage Product Types](../settings/product-types/page.mdx)
