--- a/www/apps/user-guide/app/orders/payments/page.mdx
+++ b/www/apps/user-guide/app/orders/payments/page.mdx
@@ -148,8 +148,6 @@ The link is then copied and you can share it with the customer to authorize the 
 
 <Note title="Tip">
 
-{/* TODO add link to guide once available */}
-
-If the payment link doesn't start with a domain or has a domain that doesn't match your storefront, refer your technical team to [this guide](#) to set up the storefront domain.
+If the payment link doesn't start with a domain or has a domain that doesn't match your storefront, refer your technical team to [this guide](!resources!/references/medusa-config#storefronturl) to set up the storefront domain.
 
 </Note>
