--- a/www/apps/user-guide/app/settings/sales-channels/page.mdx
+++ b/www/apps/user-guide/app/settings/sales-channels/page.mdx
@@ -28,9 +28,7 @@ Sales channels are associated with other data and settings in your commerce stor
 
 <Note title="Technical Tip">
 
-{/* TODO add link */}
-
-Developers can use [Publishable API Keys](#) to easily associate a storefront or client with a sales channel.
+Developers can use [Publishable API Keys](../developer/secret-api-keys/page.mdx) to easily associate a storefront or client with a sales channel.
 
 </Note>
 
