--- a/www/apps/user-guide/app/customers/manage/page.mdx
+++ b/www/apps/user-guide/app/customers/manage/page.mdx
@@ -6,7 +6,7 @@ import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusa
 import { Table } from "docs-ui"
 
 export const metadata = {
-  title: `Manage Customers`,
+  title: `Manage Customers in Medusa Admin`,
 }
 
 # {metadata.title}
