--- a/www/apps/user-guide/app/inventory/inventory/page.mdx
+++ b/www/apps/user-guide/app/inventory/inventory/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Inventory Items`,
+  title: `Manage Inventory Items in Medusa Admin`,
 }
 
 # {metadata.title}
