--- a/www/apps/user-guide/app/not-found.mdx
+++ b/www/apps/user-guide/app/not-found.mdx
@@ -7,7 +7,7 @@ import {
 } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Page Not Found`,
+  title: `Page Not Found in Medusa Admin`,
 }
 
 # {metadata.title}
