--- a/www/apps/user-guide/app/orders/claims/page.mdx
+++ b/www/apps/user-guide/app/orders/claims/page.mdx
@@ -8,7 +8,7 @@ import {
 } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Order Claims`,
+  title: `Manage Order Claims in Medusa Admin`,
 }
 
 # {metadata.title}
