--- a/www/apps/user-guide/app/orders/edit/page.mdx
+++ b/www/apps/user-guide/app/orders/edit/page.mdx
@@ -7,7 +7,7 @@ import {
 } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Edit an Order’s Items`,
+  title: `Edit an Order’s Items in Medusa Admin`,
 }
 
 # {metadata.title}
