--- a/www/apps/user-guide/app/orders/fulfillments/page.mdx
+++ b/www/apps/user-guide/app/orders/fulfillments/page.mdx
@@ -9,7 +9,7 @@ import {
 import { Table } from "docs-ui"
 
 export const metadata = {
-  title: `Manage Order Fulfillments`,
+  title: `Manage Order Fulfillments in Medusa Admin`,
 }
 
 # {metadata.title}
