--- a/www/apps/user-guide/app/orders/manage/page.mdx
+++ b/www/apps/user-guide/app/orders/manage/page.mdx
@@ -11,7 +11,7 @@ import {
 } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Order Details`,
+  title: `Manage Order Details in Medusa Admin`,
 }
 
 # {metadata.title}
