--- a/www/apps/user-guide/app/orders/returns/page.mdx
+++ b/www/apps/user-guide/app/orders/returns/page.mdx
@@ -10,7 +10,7 @@ import {
 } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Order Returns`,
+  title: `Manage Order Returns in Medusa Admin`,
 }
 
 # {metadata.title}
