--- a/www/apps/user-guide/app/price-lists/manage/page.mdx
+++ b/www/apps/user-guide/app/price-lists/manage/page.mdx
@@ -6,7 +6,7 @@ import { EllipsisHorizontal } from "@medusajs/icons"
 import { Table } from "docs-ui"
 
 export const metadata = {
-  title: `Manage Price Lists`,
+  title: `Manage Price Lists in Medusa Admin`,
 }
 
 # {metadata.title}
