--- a/www/apps/user-guide/app/price-lists/page.mdx
+++ b/www/apps/user-guide/app/price-lists/page.mdx
@@ -3,7 +3,7 @@ sidebar_autogenerate_exclude: true
 ---
 
 export const metadata = {
-  title: `Price Lists`,
+  title: `Price Lists in Medusa Admin`,
 }
 
 # {metadata.title}
