--- a/www/apps/user-guide/app/products/create/bundle/page.mdx
+++ b/www/apps/user-guide/app/products/create/bundle/page.mdx
@@ -3,7 +3,7 @@ sidebar_label: "Bundle Product"
 ---
 
 export const metadata = {
-  title: `Create Bundle Product`,
+  title: `Create Bundle Product in Medusa Admin`,
 }
 
 # {metadata.title}
