--- a/www/apps/user-guide/app/products/create/multi-part/page.mdx
+++ b/www/apps/user-guide/app/products/create/multi-part/page.mdx
@@ -3,7 +3,7 @@ sidebar_label: "Multi-Part Product"
 ---
 
 export const metadata = {
-  title: `Create Multi-Part Product`,
+  title: `Create Multi-Part Product in Medusa Admin`,
 }
 
 # {metadata.title}
