--- a/www/apps/user-guide/app/products/create/page.mdx
+++ b/www/apps/user-guide/app/products/create/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 import { DotsSix, EllipsisHorizontal, XMark, TaxExclusive, TaxInclusive } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Create Product`,
+  title: `Create Product in Medusa Admin`,
 }
 
 # {metadata.title}
