--- a/www/apps/user-guide/app/products/edit/page.mdx
+++ b/www/apps/user-guide/app/products/edit/page.mdx
@@ -6,7 +6,7 @@ import { ArrowUpRightOnBox, EllipsisHorizontal, EllipsisVertical, ThumbnailBadge
 import { Table } from "docs-ui"
 
 export const metadata = {
-  title: `Edit Product`,
+  title: `Edit Product in Medusa Admin`,
 }
 
 # {metadata.title}
