--- a/www/apps/user-guide/app/products/import/page.mdx
+++ b/www/apps/user-guide/app/products/import/page.mdx
@@ -6,7 +6,7 @@ import { ArrowDownTray, Trash, BellAlert, EllipsisHorizontal } from "@medusajs/i
 import { Prerequisites, Table } from "docs-ui"
 
 export const metadata = {
-  title: `Import Products`,
+  title: `Import Products in Medusa Admin`,
 }
 
 # {metadata.title}
