--- a/www/apps/user-guide/app/products/variants/page.mdx
+++ b/www/apps/user-guide/app/products/variants/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 3
 import { EllipsisVertical, TaxExclusive, TaxInclusive, ArrowUpRightOnBox } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Product Variants`,
+  title: `Manage Product Variants in Medusa Admin`,
 }
 
 # {metadata.title}
