--- a/www/apps/user-guide/app/promotions/campaigns/page.mdx
+++ b/www/apps/user-guide/app/promotions/campaigns/page.mdx
@@ -2,7 +2,7 @@ import { EllipsisHorizontal } from "@medusajs/icons"
 import { Table } from "docs-ui"
 
 export const metadata = {
-  title: `Manage Campaigns`,
+  title: `Manage Campaigns in Medusa Admin`,
 }
 
 # {metadata.title}
