--- a/www/apps/user-guide/app/settings/locations-and-shipping/locations/page.mdx
+++ b/www/apps/user-guide/app/settings/locations-and-shipping/locations/page.mdx
@@ -6,7 +6,7 @@ sidebar_label: "Locations"
 import { EllipsisHorizontal, TaxExclusive, TaxInclusive } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Locations`,
+  title: `Manage Locations in Medusa Admin`,
 }
 
 # {metadata.title}
