--- a/www/apps/user-guide/app/settings/locations-and-shipping/page.mdx
+++ b/www/apps/user-guide/app/settings/locations-and-shipping/page.mdx
@@ -1,7 +1,7 @@
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Locations & Shipping Overview`,
+  title: `Locations & Shipping Overview in Medusa Admin`,
 }
 
 # {metadata.title}
