--- a/www/apps/user-guide/app/settings/page.mdx
+++ b/www/apps/user-guide/app/settings/page.mdx
@@ -5,7 +5,7 @@ sidebar_autogenerate_exclude: true
 import { ArrowUturnLeft } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Settings`,
+  title: `Settings in Medusa Admin`,
 }
 
 # {metadata.title}
