--- a/www/apps/user-guide/app/settings/product-tags/page.mdx
+++ b/www/apps/user-guide/app/settings/product-tags/page.mdx
@@ -1,7 +1,7 @@
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Product Tags`,
+  title: `Manage Product Tags in Medusa Admin`,
 }
 
 # {metadata.title}
