--- a/www/apps/user-guide/app/settings/product-types/page.mdx
+++ b/www/apps/user-guide/app/settings/product-types/page.mdx
@@ -1,7 +1,7 @@
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Product Types`,
+  title: `Manage Product Types in Medusa Admin`,
 }
 
 # {metadata.title}
