--- a/www/apps/user-guide/app/settings/regions/page.mdx
+++ b/www/apps/user-guide/app/settings/regions/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 4
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Regions`,
+  title: `Manage Regions in Medusa Admin`,
 }
 
 # {metadata.title}
