--- a/www/apps/user-guide/app/settings/return-reasons/page.mdx
+++ b/www/apps/user-guide/app/settings/return-reasons/page.mdx
@@ -6,7 +6,7 @@ sidebar_label: "Return Reasons"
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Return Reasons`,
+  title: `Manage Return Reasons in Medusa Admin`,
 }
 
 # {metadata.title}
