--- a/www/apps/user-guide/app/settings/store/page.mdx
+++ b/www/apps/user-guide/app/settings/store/page.mdx
@@ -6,7 +6,7 @@ sidebar_label: "Store"
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Store`,
+  title: `Manage Store in Medusa Admin`,
 }
 
 # {metadata.title}
