--- a/www/apps/user-guide/app/settings/users/page.mdx
+++ b/www/apps/user-guide/app/settings/users/page.mdx
@@ -6,7 +6,7 @@ sidebar_label: Users
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Users`,
+  title: `Manage Users in Medusa Admin`,
 }
 
 # {metadata.title}
