--- a/www/apps/user-guide/app/tips/bulk-editor/page.mdx
+++ b/www/apps/user-guide/app/tips/bulk-editor/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 import { getOsShortcut } from "docs-ui"
 
 export const metadata = {
-  title: `Bulk Editor`,
+  title: `Bulk Editor in Medusa Admin`,
 }
 
 # {metadata.title}
