--- a/www/apps/user-guide/app/customers/groups/page.mdx
+++ b/www/apps/user-guide/app/customers/groups/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 2
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Customer Groups`,
+  title: `Manage Customer Groups in Medusa Admin`,
 }
 
 # {metadata.title}
