--- a/www/apps/user-guide/app/customers/page.mdx
+++ b/www/apps/user-guide/app/customers/page.mdx
@@ -3,7 +3,7 @@ sidebar_autogenerate_exclude: true
 ---
 
 export const metadata = {
-  title: `Customers Overview`,
+  title: `Customers Overview in Medusa Admin`,
 }
 
 # {metadata.title}
