--- a/www/apps/user-guide/app/inventory/reservations/page.mdx
+++ b/www/apps/user-guide/app/inventory/reservations/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 3
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Reservations`,
+  title: `Manage Reservations in Medusa Admin`,
 }
 
 # {metadata.title}
