--- a/www/apps/user-guide/app/orders/exchanges/page.mdx
+++ b/www/apps/user-guide/app/orders/exchanges/page.mdx
@@ -8,7 +8,7 @@ import {
 } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Exchanges`,
+  title: `Manage Exchanges in Medusa Admin`,
 }
 
 # {metadata.title}
