--- a/www/apps/user-guide/app/page.mdx
+++ b/www/apps/user-guide/app/page.mdx
@@ -1,7 +1,7 @@
 import { BellAlert, SidebarLeft } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Medusa Admin User Guide`,
+  title: `Medusa Admin User Guide in Medusa Admin`,
 }
 
 # {metadata.title}
