--- a/www/apps/user-guide/app/price-lists/create/page.mdx
+++ b/www/apps/user-guide/app/price-lists/create/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Create a Price List`,
+  title: `Create a Price List in Medusa Admin`,
 }
 
 # {metadata.title}
