--- a/www/apps/user-guide/app/products/categories/page.mdx
+++ b/www/apps/user-guide/app/products/categories/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 5
 import { DotsSix, TriangleRightMini, EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Product Categories`,
+  title: `Manage Product Categories in Medusa Admin`,
 }
 
 # {metadata.title}
