--- a/www/apps/user-guide/app/products/collections/page.mdx
+++ b/www/apps/user-guide/app/products/collections/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 4
 import { EllipsisHorizontal,ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Product Collections`,
+  title: `Manage Product Collections in Medusa Admin`,
 }
 
 # {metadata.title}
