--- a/www/apps/user-guide/app/products/export/page.mdx
+++ b/www/apps/user-guide/app/products/export/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 7
 import { BellAlert, ArrowDownTray } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Export Products`,
+  title: `Export Products in Medusa Admin`,
 }
 
 # {metadata.title}
