--- a/www/apps/user-guide/app/promotions/create/page.mdx
+++ b/www/apps/user-guide/app/promotions/create/page.mdx
@@ -3,7 +3,7 @@ sidebar_position: 1
 ---
 
 export const metadata = {
-  title: `Create a Promotion`,
+  title: `Create a Promotion in Medusa Admin`,
 }
 
 # {metadata.title}
