--- a/www/apps/user-guide/app/promotions/manage/page.mdx
+++ b/www/apps/user-guide/app/promotions/manage/page.mdx
@@ -6,7 +6,7 @@ import { EllipsisHorizontal } from "@medusajs/icons"
 import { Table } from "docs-ui"
 
 export const metadata = {
-  title: `Manage Promotions`,
+  title: `Manage Promotions in Medusa Admin`,
 }
 
 # {metadata.title}
