--- a/www/apps/user-guide/app/settings/locations-and-shipping/shipping-profiles/page.mdx
+++ b/www/apps/user-guide/app/settings/locations-and-shipping/shipping-profiles/page.mdx
@@ -1,7 +1,7 @@
 import { EllipsisHorizontal, ArrowUpRightOnBox, EllipsisVertical } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Shipping Profiles`,
+  title: `Manage Shipping Profiles in Medusa Admin`,
 }
 
 # {metadata.title}
