--- a/www/apps/user-guide/app/settings/sales-channels/page.mdx
+++ b/www/apps/user-guide/app/settings/sales-channels/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 8
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Sales Channels`,
+  title: `Manage Sales Channels in Medusa Admin`,
 }
 
 # {metadata.title}
