--- a/www/apps/user-guide/app/settings/tax-regions/page.mdx
+++ b/www/apps/user-guide/app/settings/tax-regions/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 6
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Tax Regions`,
+  title: `Tax Regions in Medusa Admin`,
 }
 
 # {metadata.title}
