--- a/www/apps/user-guide/app/settings/users/invites/page.mdx
+++ b/www/apps/user-guide/app/settings/users/invites/page.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 import { EllipsisHorizontal } from "@medusajs/icons"
 
 export const metadata = {
-  title: `Manage Invites`,
+  title: `Manage Invites in Medusa Admin`,
 }
 
 # {metadata.title}
